--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <ol>
         
             <li> Lauro  </li>
-            <li> Thiago </li>
-            <li> Felipe </li>
+            <li> Lauro </li>
+            <li> Lauro </li>
         
         </ol>
     </body>
