Mudança de componentes da lista ordenada.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h2> Lista não ordenada </h2>
     
         <ul>
-            <li> Café </li>
-            <li> Pão </li>
             <li> Leite </li>
+            <li> Ovo </li>
+            <li> Café </li>
         </ul>
 
     <h2> Lista ordenada </h2>
